# tcaPipeline

./: README.md  pyproject.toml  requirements.txt  session_store.db  stats.json
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
src/infinitylabs_tca/: __init__.py  __main__.py  pipeline_registry.py
src/infinitylabs_tca/pipelines/loading/: nodes.py  pipeline.py
src/infinitylabs_tca/pipelines/modeling/: nodes.py  pipeline.py
src/infinitylabs_tca/pipelines/preprocessing/: nodes.py  pipeline.py
src/infinitylabs_tca/pipelines/storing/: nodes.py  pipeline.py
