[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "infinitylabs_tca"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
infinitylabs-tca = "infinitylabs_tca.__main__:main"

[tool.kedro]
package_name = "infinitylabs_tca"
project_name = "infinityLabs_tca"
kedro_init_version = "0.19.6"
tools = [ "Linting", "Custom Logging", "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "infinitylabs_tca.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
